--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-phone-number-input": "^3.2.19",
     "react-router-dom": "^6.8.2",
     "react-scripts": "^5.0.1",
+    "validations": "^0.1.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
